@@ -1,7 +1,6 @@
 import com.android.build.api.dsl.CommonExtension
+import org.gradle.api.JavaVersion
 import org.gradle.api.Project
-import org.gradle.api.plugins.JavaPluginExtension
-import org.gradle.kotlin.dsl.configure
 import org.gradle.kotlin.dsl.withType
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
@@ -9,26 +8,29 @@ internal fun Project.configureKotlinAndroid(
     commonExtension: CommonExtension<*, *, *, *, *, *>,
 ) {
     commonExtension.apply {
-        compileSdk = rootProject.extra["compileSdk"] as Int
+        compileSdk = 35
+
         defaultConfig {
-            minSdk = rootProject.extra["minSdk"] as Int
+            minSdk = 26
         }
+
         compileOptions {
-            sourceCompatibility = org.gradle.api.JavaVersion.VERSION_17
-            targetCompatibility = org.gradle.api.JavaVersion.VERSION_17
+            sourceCompatibility = JavaVersion.VERSION_17
+            targetCompatibility = JavaVersion.VERSION_17
             isCoreLibraryDesugaringEnabled = true
         }
+
         testOptions {
             unitTests {
                 isIncludeAndroidResources = true
                 isReturnDefaultValues = true
                 all { test ->
                     test.useJUnitPlatform()
-                    test.jvmArgs("-XX:+EnableDynamicAgentLoading")
                 }
             }
         }
     }
+
     configureKotlinJvmTarget()
 }
 
@@ -40,9 +42,6 @@ internal fun Project.configureKotlinJvmTarget() {
                 listOf(
                     "-opt-in=kotlin.RequiresOptIn",
                     "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi",
-                    "-opt-in=kotlinx.coroutines.FlowPreview",
-                    "-opt-in=androidx.compose.material3.ExperimentalMaterial3Api",
-                    "-opt-in=androidx.compose.foundation.ExperimentalFoundationApi",
                 )
             )
         }
